@@ -44,6 +44,8 @@
 		<script type="text/javascript" src="js/buildings/plasma_turret.js"></script>
 		<script type="text/javascript" src="js/buildings/neutron_accelerator.js"></script>
 		<script type="text/javascript" src="js/buildings/vertical_bridge.js"></script>
+		<script type="text/javascript" src="js/buildings/air_defence_site.js"></script>
+		<script type="text/javascript" src="js/buildings/repair_station.js"></script>
 		<script type="text/javascript" src="js/buildings/dependencies.js"></script>
 		
 		<script type="text/javascript" src="js/units/abstract.js"></script>
